--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8413,8 +8413,8 @@ a.category-slug.active {
 */
 
 .jump-link {
+  display: inline-block;
   position: relative;
-  margin-top: 1.1875em;
   margin-right: 1.5em;
   border-bottom-width: 1px;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
@@ -8436,7 +8436,6 @@ a.category-slug.active {
 }
 
 .jump-link__large {
-  margin-top: 1.05555556em;
   margin-right: 1.5em;
   font-size: 1.125em;
 }
